Add files for new exercises (not yet implemented)
+ file1 reading from a file
+ file2 writing to a file from stdin
+ stdio1 reading from stdin

--- a/info.toml
+++ b/info.toml
@@ -824,3 +824,13 @@ hint = """
 The implementation of FromStr should return an Ok with a Person object,
 or an Err with a string if the string is not valid.
 This is almost like the `try_from_into` exercise."""
+
+
+
+# Unsorted exercises for the IO file and stdio challenges
+
+[[exercises]]
+name = "file1"
+path = "exercises/io/file1.rs"
+mode = "test"
+hint = ""
